--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <div class="collapsible-body-block">
                   <div>
                     <span>I can do:</span>
-                    <span class="text">webSites, animation, unusual buttons, paralax, 3D, neon, cards, smoke, video
+                    <span class="text">websites, animation, unusual buttons, paralax, 3D, neon, cards, smoke, video
                       animation,
                       text animation, unusual social icons, e-comerce cards, mouse animation, scroll effects, SVG
                       animation,
@@ -142,23 +142,22 @@
               </div>
               <div class="collapsible-body">
                 <span>
-                  Сделал адаптивное web приложение полноценного интернет
-                  магазина (React, Node.js, PostgreSQL) | I've created an adaptive Webapp of the online shop (React,
+                  I've created an adaptive web app of the online shop (React,
                   Node.js, PostgreSQL)
                 </span>
                 <ul class="ul-li">
-                  <li><span>Для выполнения этой задачи изучил: | For this goal I've learnt: </span></li>
+                  <li><span>In order to do that I’ve learnt:</span></li>
                   <ul>
                     <li>Node.js</li>
                     <li>Express</li>
                     <li>PostgreSQL</li>
                     <li>React Bootstrap</li>
-                    <li>запуск приложения на серверe | how to start an app on the server</li>
+                    <li>How to launch the app on the server</li>
                   </ul>
                   <br />
-                  <li><span>Использовал следующие технологии: | I've used the following technologies:</span></li>
+                  <li><span>I've used the following technologies:</span></li>
                   <ul>
-                    <li>для управления фронтенд-состоянием приложения | for frontend apps' control </li>
+                    <li>to manage the application’s frontend state</li>
                     <ul>
                       <li>
                         MobX
@@ -166,7 +165,7 @@
                     </ul>
                   </ul>
                   <ul>
-                    <li>для авторизации пользователя | for user authorization</li>
+                    <li>to authorize the user:</li>
                     <ul>
                       <li>
                         JSON Web Token
@@ -174,35 +173,31 @@
                     </ul>
                   </ul>
                   <ul>
-                    <li>для добовления товара в список сравнения | for adding a product to a comparative list </li>
+                    <li>to add a product to a comparative list:</li>
                     <ul>
                       <li>
                         Cookie
                       </li>
                     </ul>
                   </ul>
-                  <!-- </li> -->
                   <ul>
-                    <li>для валидации полей авторизации и регистрации пользователя | for authorization fields and user
-                      registration validation</li>
+                    <li>to validate the authorization and user registration fields:</li>
                     <ul>
                       <li>
                         Express-validator
                       </li>
                     </ul>
-                    <!-- </li> -->
                   </ul>
                   <ul>
-                    <li>для сжатия статических файлов | for static files contraction </li>
+                    <li>to compress static files:</li>
                     <ul>
                       <li>
                         Сompression
                       </li>
                     </ul>
                   </ul>
-                  <!-- <li><span> использовал:</span></li> -->
                   <ul>
-                    <li>для отправки email | for e-mail sending </li>
+                    <li>to send e-mails</li>
                     <ul>
                       <li>
                         Nodemailer
@@ -212,24 +207,22 @@
                 </ul>
                 <br />
                 <div class="collapsible-body-link">
-                  Вот ссылка на web приложение: | Here is the link to my Webapp: &nbsp;&nbsp;<a
+                  Here’s the link to my web app: &nbsp;&nbsp;<a
                     href="https://euro-app.site">https://euro-app.site</a><br />
-                  Вот ссылка на GitHub: | Here is the GitHub link: &nbsp;&nbsp;<a
+                  Here’s the GetHub link: &nbsp;&nbsp;<a
                     href="https://github.com/Victor-Irzunov/E-comerce-React-Node.js-PostgreSQL-.git">https://github.com/Victor-Irzunov/E-comerce-React-Node.js-PostgreSQL-.git</a><br />
                   <i>Administrator login: q@tut.by<br />
                     Administrator password: 11111</i><br />
-                  Срок выполнения: 3 месяца | The target date is 3 months
+                  Completion time: three months
                 </div>
 
 
 
-                <span>Сделал web приложение простую социальную сеть: | I made a webapp of a simple social network:
+                <span>I’ve made a web app of a simple social network:
                 </span>
                 <ul class="ul-li">
                   <li>
-                    <span>для управления фронтенд состоянием приложения использовал | to manage the frontend state of
-                      the
-                      application, I used:</span>
+                    <span>to manage the application’s frontend state I used:</span>
                     <ul>
                       <li>Redux</li>
                     </ul>
@@ -237,11 +230,10 @@
                 </ul>
                 <br />
                 <div>
-                  Вот ссылка на GitHub | here is the GitHub link: &nbsp;&nbsp;<a
+                  Here’s the GetHub link: &nbsp;&nbsp;<a
                     href="https://github.com/Victor-Irzunov/React_social.git">https://github.com/Victor-Irzunov/React_social.git</a><br />
-                  Срок выполнения: 2 недели | The target date is 2 weeks
+                  Completion time: two weeks
                 </div>
-
             </li>
 
 
@@ -257,9 +249,9 @@
                 </div>
               </div>
               <div class="collapsible-body">
-                <span>Cделал web приложение на Node.js | I made a web application with Node.js</span>
+                <span>I’ve made a web app with Node.js</span>
                 <ul class="ul-li">
-                  <li><span>Для выполнения этой задачи изучил: | For this goal I've learnt: </span></li>
+                  <li><span>In order to do that I’ve learnt:</span></li>
                   <ul>
                     <li>
                       Handlebars
@@ -272,7 +264,7 @@
 
                   <li><span>The following NPM packages were used:</span></li>
                   <ul>
-                    <li>для авторизации пользователя | for user authorization</li>
+                    <li>to authorize the user:</li>
                     <ul>
                       <li>
                         Express-session
@@ -280,8 +272,7 @@
                     </ul>
                   </ul>
                   <ul>
-                    <li>для избежания определённых атак и защиты приложения (путём добавления заголовков)|| to prevent
-                      cyberattacks and app protection (by adding headers)</li>
+                    <li>to prevent cyberattacks and app protection (by adding headers)</li>
                     <ul>
                       <li>
                         Helmet
@@ -289,8 +280,7 @@
                     </ul>
                   </ul>
                   <ul>
-                    <li>для валидации полей авторизации и регистрации пользователя | for authorization fields and user
-                      registration validation </li>
+                    <li>to validate the authorization and user registration fields:</li>
                     <ul>
                       <li>
                         Express-validator
@@ -298,7 +288,7 @@
                     </ul>
                   </ul>
                   <ul>
-                    <li>для сжатия статических файлов | for static files contraction </li>
+                    <li>to compress static files:</li>
                     <ul>
                       <li>
                         Сompression
@@ -306,7 +296,7 @@
                     </ul>
                   </ul>
                   <ul>
-                    <li>для отправки email| for e-mail sending</li>
+                    <li>to send e-mails</li>
                     <ul>
                       <li>
                         Nodemailer
@@ -316,13 +306,13 @@
                 </ul>
                 <br />
                 <div class="collapsible-body-link">
-                  Вот ссылка на web приложение: | Here is the link to my Webapp: &nbsp;&nbsp;<a
+                  Here’s the link to my web app: &nbsp;&nbsp;<a
                     href="https://quiet-gorge-08860.herokuapp.com">https://quiet-gorge-08860.herokuapp.com</a><br />
-                  Вот ссылка на GitHub: | Here is the GitHub link:&nbsp;&nbsp;<a
+                  Here’s the GetHub link: &nbsp;&nbsp;<a
                     href="https://github.com/Victor-Irzunov/e-commerce-application.git">https://github.com/Victor-Irzunov/e-commerce-application.git</a><br />
                   <i>Administrator login: a@tut.by<br />
                     Administrator password: 111</i><br />
-                  Срок выполнения: 1 месяц | Torget date is 1 month
+                  Completion time: one month
                 </div>
               </div>
             </li>
@@ -340,11 +330,9 @@
               </div>
               <div class="collapsible-body">
                 <span>
-                  Сделал простое, но полноценное клиент-серверное web приложение
-                  (todo application), для выполнения этой задачи изучил: | I made a simple, but full-fledged
-                  client-server web application (todo application), for this goal I've learnt:
+                  I’ve made a simple, but full-fledged client-server web application (to-do application).
+                  In order to do that I've learnt:
                 </span>
-
                 <ul class="ul__mysql">
                   <li>
                     MySQL
@@ -352,11 +340,11 @@
                 </ul>
                 <br />
                 <div>
-                  Вот ссылка на web приложение: | Here is the link to my Webapp: &nbsp;&nbsp;<a
+                  Here’s the link to my web app: &nbsp;&nbsp;<a
                     href="https://mighty-falls-71399.herokuapp.com/">https://mighty-falls-71399.herokuapp.com/</a><br />
-                  Вот ссылка на GitHub: | Here is the GitHub link: &nbsp;&nbsp;<a
+                  Here’s the GetHub link: &nbsp;&nbsp;<a
                     href="https://github.com/Victor-Irzunov/REST-API.git">https://github.com/Victor-Irzunov/REST-API.git</a><br />
-                  Срок выполнения: 1 неделя | Tartet date is 1 week
+                    Completion time: one week
                 </div>
                 </span>
               </div>
@@ -378,9 +366,9 @@
               </div>
               <div class="collapsible-body"><span>
                   <div>
-                    Вот ссылка на GitHub: | Here is the GitHub link: &nbsp;&nbsp;<a
+                    Here’s the GetHub link: &nbsp;&nbsp;<a
                       href="https://github.com/Victor-Irzunov/GraphQL.git">https://github.com/Victor-Irzunov/GraphQL.git</a><br />
-                    Срок выполнения: 3 дня | The target date is 3 days
+                      Completion time: three days
                   </div>
                 </span></div>
             </li>
@@ -419,15 +407,15 @@
         </div>
         <div class="service">
           <i class="icon fa fa-desktop"></i>
-          <h4>Cross-browser compatibility</h4>
+          <h4>Cross-browser Compatibility</h4>
         </div>
         <div class="service">
           <i class="icon fas fa-credit-card"></i>
-          <h4>Ui Design</h4>
+          <h4>UI Design</h4>
         </div>
         <div class="service">
           <i class="icon fa fa-server" aria-hidden="true"></i>
-          <h4>Настройка сервера и запуск приложения | Configuring the server and launching the application</h4>
+          <h4>Configuring Servers and Launching Applications</h4>
         </div>
       </div>
     </div>
@@ -436,42 +424,42 @@
   <!-- Education -->
   <section id="education">
     <div class="inner-width">
-      <h1 class="section-title">Education & Experiences</h1>
+      <h1 class="section-title">Education & Experience</h1>
       <div class="time-line">
         <div class="block">
           <h4>2020</h4>
           <h3>HTML CSS</h3>
-          <p>Обучение в IT-Academy | Studing in the IT-Academy </p>
+          <p>Studing in the IT-Academy </p>
         </div>
 
         <div class="block">
           <h4>2020</h4>
           <h3>JavaScript</h3>
-          <p>Обучение в IT-Academy | Studing in the IT-Academy </p>
+          <p>Studing in the IT-Academy </p>
         </div>
 
         <div class="block">
           <h4>2020 - 2021</h4>
           <h3>React</h3>
-          <p>Самообучение | Selfstudy </p>
+          <p>Self-education</p>
         </div>
 
         <div class="block">
           <h4>2021</h4>
           <h3>Node.js</h3>
-          <p>Обучение в «Центре Обучающих Технологий» | Studing in the "Center for Learning Technologies"</p>
+          <p>Studing in the "Centre of Learning Technologies"</p>
         </div>
 
         <div class="block">
           <h4>2021</h4>
           <h3>NoSQL</h3>
-          <p>Самообучение | Selfstudy </p>
+          <p>Self-education</p>
         </div>
 
         <div class="block">
           <h4>2021</h4>
           <h3>SQL</h3>
-          <p>Самообучение | Selfstudy </p>
+          <p>Self-education</p>
         </div>
       </div>
     </div>
