--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <div class="collapsible-body-block">
                   <div>
                     <span>I can do:</span>
-                    <span class="text">webSites, animation, unusual buttons, paralax, 3D, neon, cards, smoke, video
+                    <span class="text">websites, animation, unusual buttons, paralax, 3D, neon, cards, smoke, video
                       animation,
                       text animation, unusual social icons, e-comerce cards, mouse animation, scroll effects, SVG
                       animation,
@@ -142,8 +142,7 @@
               </div>
               <div class="collapsible-body">
                 <span>
-                  Сделал адаптивное web приложение полноценного интернет
-                  магазина (React, Node.js, PostgreSQL) | I've created an adaptive Webapp of the online shop (React,
+                  I've created an adaptive web app of the online shop (React,
                   Node.js, PostgreSQL)
                 </span>
                 <ul class="ul-li">
