--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <a href="#about">About</a>
         <a href="#services">Services</a>
         <a href="#education">Education</a>
-        <a href="#works">Works</a>
+        <a href="#works">Portfolio</a>
         <a href="#contact">Contact</a>
       </div>
     </div>
@@ -47,7 +47,7 @@
       <div class="content">
         <h1>Hi! I'm a Software Engineer</h1>
         <div class="sm">
-          <a href="https://www.linkedin.com/in/victor-irzunov-0605a2bb" class="fab fa-linkedin-in"></a>
+          <a href="https://www.linkedin.com/in/victor-irzunov-0605a2bb" target="_blank" class="fab fa-linkedin-in"></a>
           <a href="#" class="fab fa-facebook-f"></a>
           <a href="#" class="fab fa-twitter"></a>
           <a href="#" class="fab fa-instagram"></a>
@@ -209,7 +209,7 @@
                 <div class="collapsible-body-link">
                   Here’s the link to my web app: &nbsp;&nbsp;<a
                     href="https://euro-app.site">https://euro-app.site</a><br />
-                  Here’s the GetHub link: &nbsp;&nbsp;<a
+                  Here’s the GitHub link: &nbsp;&nbsp;<a
                     href="https://github.com/Victor-Irzunov/E-comerce-React-Node.js-PostgreSQL-.git">https://github.com/Victor-Irzunov/E-comerce-React-Node.js-PostgreSQL-.git</a><br />
                   <i>Administrator login: q@tut.by<br />
                     Administrator password: 11111</i><br />
@@ -230,7 +230,7 @@
                 </ul>
                 <br />
                 <div>
-                  Here’s the GetHub link: &nbsp;&nbsp;<a
+                  Here’s the GitHub link: &nbsp;&nbsp;<a
                     href="https://github.com/Victor-Irzunov/React_social.git">https://github.com/Victor-Irzunov/React_social.git</a><br />
                   Completion time: two weeks
                 </div>
@@ -308,7 +308,7 @@
                 <div class="collapsible-body-link">
                   Here’s the link to my web app: &nbsp;&nbsp;<a
                     href="https://quiet-gorge-08860.herokuapp.com">https://quiet-gorge-08860.herokuapp.com</a><br />
-                  Here’s the GetHub link: &nbsp;&nbsp;<a
+                  Here’s the GitHub link: &nbsp;&nbsp;<a
                     href="https://github.com/Victor-Irzunov/e-commerce-application.git">https://github.com/Victor-Irzunov/e-commerce-application.git</a><br />
                   <i>Administrator login: a@tut.by<br />
                     Administrator password: 111</i><br />
@@ -342,7 +342,7 @@
                 <div>
                   Here’s the link to my web app: &nbsp;&nbsp;<a
                     href="https://mighty-falls-71399.herokuapp.com/">https://mighty-falls-71399.herokuapp.com/</a><br />
-                  Here’s the GetHub link: &nbsp;&nbsp;<a
+                  Here’s the GitHub link: &nbsp;&nbsp;<a
                     href="https://github.com/Victor-Irzunov/REST-API.git">https://github.com/Victor-Irzunov/REST-API.git</a><br />
                   Completion time: one week
                 </div>
@@ -366,7 +366,7 @@
               </div>
               <div class="collapsible-body"><span>
                   <div>
-                    Here’s the GetHub link: &nbsp;&nbsp;<a
+                    Here’s the GitHub link: &nbsp;&nbsp;<a
                       href="https://github.com/Victor-Irzunov/GraphQL.git">https://github.com/Victor-Irzunov/GraphQL.git</a><br />
                     Completion time: three days
                   </div>
