--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="sm">
           <a href="https://www.linkedin.com/in/victor-irzunov-0605a2bb" class="fab fa-linkedin-in"></a>
           <a href="#" class="fab fa-facebook-f"></a>
-          <a href="#" class="fab fa-twitter"></a>
+          <a href="#" class="fab fa-telegram"></a>
           <a href="#" class="fab fa-instagram"></a>
           <a href="#" class="fab fa-youtube"></a>
         </div>
@@ -600,7 +600,7 @@
       <div class="sm">
         <a href="https://www.linkedin.com/in/victor-irzunov-0605a2bb/" class="fab fa-linkedin-in"></a>
         <a href="#" class="fab fa-facebook-f"></a>
-        <a href="#" class="fab fa-twitter"></a>
+        <a href="#" class="fab fa-telegram"></a>
         <a href="#" class="fab fa-instagram"></a>
         <a href="#" class="fab fa-youtube"></a>
       </div>
