--- a/index.html
+++ b/index.html
@@ -48,9 +48,10 @@
         <h1>Hi! I'm a Software Engineer</h1>
         <div class="sm">
           <a href="https://www.linkedin.com/in/victor-irzunov-0605a2bb" target="_blank" class="fab fa-linkedin-in"></a>
-          <a href="#" class="fab fa-facebook-f"></a>
-          <a href="#" class="fab fa-twitter"></a>
-          <a href="#" class="fab fa-instagram"></a>
+          <a href="https://www.instagram.com/webproduct_developer" target="_blank" class="fab fa-instagram"></a>
+          <a href="https://www.facebook.com/profile.php?id=100050427249731" target="_blank"
+            class="fab fa-facebook-f"></a>
+          <a href="https://t.me/Victor_developer" class="fab fa-telegram" target="_blank"></a>
           <a href="#" class="fab fa-youtube"></a>
         </div>
         <div class="buttons">
@@ -207,10 +208,11 @@
                 </ul>
                 <br />
                 <div class="collapsible-body-link">
-                  Here’s the link to my web app: &nbsp;&nbsp;<a
-                    href="https://euro-app.site">https://euro-app.site</a><br />
+                  Here’s the link to my web app: &nbsp;&nbsp;<a href="https://euro-app.site"
+                    target="_blank">https://euro-app.site</a><br />
                   Here’s the GitHub link: &nbsp;&nbsp;<a
-                    href="https://github.com/Victor-Irzunov/E-comerce-React-Node.js-PostgreSQL-.git">https://github.com/Victor-Irzunov/E-comerce-React-Node.js-PostgreSQL-.git</a><br />
+                    href="https://github.com/Victor-Irzunov/E-comerce-React-Node.js-PostgreSQL-.git"
+                    target="_blank">https://github.com/Victor-Irzunov/E-comerce-React-Node.js-PostgreSQL-.git</a><br />
                   <i>Administrator login: q@tut.by<br />
                     Administrator password: 11111</i><br />
                   Completion time: three months
@@ -230,8 +232,8 @@
                 </ul>
                 <br />
                 <div>
-                  Here’s the GitHub link: &nbsp;&nbsp;<a
-                    href="https://github.com/Victor-Irzunov/React_social.git">https://github.com/Victor-Irzunov/React_social.git</a><br />
+                  Here’s the GitHub link: &nbsp;&nbsp;<a href="https://github.com/Victor-Irzunov/React_social.git"
+                    target="_blank">https://github.com/Victor-Irzunov/React_social.git</a><br />
                   Completion time: two weeks
                 </div>
             </li>
@@ -306,10 +308,11 @@
                 </ul>
                 <br />
                 <div class="collapsible-body-link">
-                  Here’s the link to my web app: &nbsp;&nbsp;<a
-                    href="https://quiet-gorge-08860.herokuapp.com">https://quiet-gorge-08860.herokuapp.com</a><br />
+                  Here’s the link to my web app: &nbsp;&nbsp;<a href="https://quiet-gorge-08860.herokuapp.com"
+                    target="_blank">https://quiet-gorge-08860.herokuapp.com</a><br />
                   Here’s the GitHub link: &nbsp;&nbsp;<a
-                    href="https://github.com/Victor-Irzunov/e-commerce-application.git">https://github.com/Victor-Irzunov/e-commerce-application.git</a><br />
+                    href="https://github.com/Victor-Irzunov/e-commerce-application.git"
+                    target="_blank">https://github.com/Victor-Irzunov/e-commerce-application.git</a><br />
                   <i>Administrator login: a@tut.by<br />
                     Administrator password: 111</i><br />
                   Completion time: one month
@@ -340,18 +343,15 @@
                 </ul>
                 <br />
                 <div>
-                  Here’s the link to my web app: &nbsp;&nbsp;<a
-                    href="https://mighty-falls-71399.herokuapp.com/">https://mighty-falls-71399.herokuapp.com/</a><br />
-                  Here’s the GitHub link: &nbsp;&nbsp;<a
-                    href="https://github.com/Victor-Irzunov/REST-API.git">https://github.com/Victor-Irzunov/REST-API.git</a><br />
+                  Here’s the link to my web app: &nbsp;&nbsp;<a href="https://mighty-falls-71399.herokuapp.com/"
+                    target="_blank">https://mighty-falls-71399.herokuapp.com/</a><br />
+                  Here’s the GitHub link: &nbsp;&nbsp;<a href="https://github.com/Victor-Irzunov/REST-API.git"
+                    target="_blank">https://github.com/Victor-Irzunov/REST-API.git</a><br />
                   Completion time: one week
                 </div>
                 </span>
               </div>
             </li>
-
-
-
 
             <li>
               <div class="collapsible-header" onclick="toggleOpen(6)">
@@ -366,11 +366,25 @@
               </div>
               <div class="collapsible-body"><span>
                   <div>
-                    Here’s the GitHub link: &nbsp;&nbsp;<a
-                      href="https://github.com/Victor-Irzunov/GraphQL.git">https://github.com/Victor-Irzunov/GraphQL.git</a><br />
+                    Here’s the GitHub link: &nbsp;&nbsp;<a href="https://github.com/Victor-Irzunov/GraphQL.git"
+                      target="_blank">https://github.com/Victor-Irzunov/GraphQL.git</a><br />
                     Completion time: three days
                   </div>
                 </span></div>
+            </li>
+
+            <li>
+              <div class="collapsible-header">
+                <div class="collapsible-header-img">
+                  <img src="./typescript_2500.png" class="img__type" />
+                  <span class="collapsible__title">TypeScript</span>
+                </div>
+                <div class="arrow-4 i6">
+                  <span class="arrow-4-left"></span>
+                  <span class="arrow-4-right"></span>
+                </div>
+              </div>
+
             </li>
           </ul>
         </div>
@@ -427,7 +441,7 @@
       <h1 class="section-title">Education & Experience</h1>
       <div class="time-line">
         <div class="block">
-          <h4>2020</h4>
+          <h4>2019</h4>
           <h3>HTML CSS</h3>
           <p>Studing in the IT-Academy </p>
         </div>
@@ -562,7 +576,49 @@
         <a href="scrin12.jpeg" class="work">
           <img src="scrin12.jpeg" alt="">
           <div class="info">
-            <h3>Dashboard</h3>
+            <h3>Website for the sale of confectionery.</h3>
+            <div class="cat">HTML, CSS, JavaScript</div>
+          </div>
+        </a>
+        <a href="scrin13.jpeg" class="work">
+          <img src="scrin13.jpeg" alt="">
+          <div class="info">
+            <h3>Website portfolio.</h3>
+            <div class="cat">HTML, CSS, JavaScript</div>
+          </div>
+        </a>
+        <a href="scrin14.jpg" class="work">
+          <img src="scrin14.jpg" alt="">
+          <div class="info">
+            <h3>A website selling fast food.</h3>
+            <div class="cat">HTML, CSS, JavaScript</div>
+          </div>
+        </a>
+        <a href="scrin15.jpg" class="work">
+          <img src="scrin15.jpg" alt="">
+          <div class="info">
+            <h3>A website selling fast food.</h3>
+            <div class="cat">HTML, CSS, JavaScript</div>
+          </div>
+        </a>
+        <a href="scrin16.jpg" class="work">
+          <img src="scrin16.jpg" alt="">
+          <div class="info">
+            <h3>Website for the sale of fresh fruit.</h3>
+            <div class="cat">HTML, CSS, JavaScript</div>
+          </div>
+        </a>
+        <a href="scrin17.jpg" class="work">
+          <img src="scrin17.jpg" alt="">
+          <div class="info">
+            <h3>Website for the sale of sneakers.</h3>
+            <div class="cat">HTML, CSS, JavaScript</div>
+          </div>
+        </a>
+        <a href="scrin18.jpg" class="work">
+          <img src="scrin18.jpg" alt="">
+          <div class="info">
+            <h3>A website selling fast food.</h3>
             <div class="cat">HTML, CSS, JavaScript</div>
           </div>
         </a>
@@ -608,10 +664,10 @@
         &copy; 2021| Created & Designed By <a href="#">Victor Irzunov</a>
       </div>
       <div class="sm">
-        <a href="https://www.linkedin.com/in/victor-irzunov-0605a2bb/" class="fab fa-linkedin-in"></a>
-        <a href="#" class="fab fa-facebook-f"></a>
-        <a href="#" class="fab fa-twitter"></a>
-        <a href="#" class="fab fa-instagram"></a>
+        <a href="https://www.linkedin.com/in/victor-irzunov-0605a2bb/" target="_black" class="fab fa-linkedin-in"></a>
+        <a href="https://www.instagram.com/webproduct_developer" target="_blank" class="fab fa-instagram"></a>
+        <a href="https://www.facebook.com/profile.php?id=100050427249731" target="_black" class="fab fa-facebook-f"></a>
+        <a href="https://t.me/Victor_developer" class="fab fa-telegram" target="_black"></a>
         <a href="#" class="fab fa-youtube"></a>
       </div>
     </div>
