--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 
 
-<!-- 26.01.2022/00:09 -->
+<!-- 04.01.2022/00:09 -->
 
 <body>
   <!-- Navbar -->
@@ -136,7 +136,7 @@
             <li>
               <div class="collapsible-header" onclick="toggleOpen(3)">
                 <div class="collapsible-header-img">
-                  <img src="https://img.icons8.com/plasticine/100/000000/react.png" class="img__react" />
+                  <img src="https://img.icons8.com/plasticine/100/000000/react.png" class="img__react"/>
                   <span class="collapsible__title">React</span>
                 </div>
                 <div class="arrow-4 i3">
@@ -158,7 +158,7 @@
                     <li>React Bootstrap</li>
                     <li>How to launch the app on the server</li>
                   </ul>
-                  <br />
+                  <br/>
                   <li><span>I've used the following technologies:</span></li>
                   <ul>
                     <li>to manage the application’s frontend state:</li>
@@ -209,18 +209,17 @@
                     </ul>
                   </ul>
                 </ul>
-                <br />
+                <br/>
                 <div class="collapsible-body-link">
                   Here’s the link to my web app: &nbsp;&nbsp;<a href="https://euro-app.site"
-                    target="_blank">https://euro-app.site</a><br />
+                                                                target="_blank">https://euro-app.site</a><br/>
                   Here’s the GitHub link: &nbsp;&nbsp;<a
-                    href="https://github.com/Victor-Irzunov/E-comerce-React-Node.js-PostgreSQL-.git"
-                    target="_blank">https://github.com/Victor-Irzunov/E-comerce-React-Node.js-PostgreSQL-.git</a><br />
-                  <i>Administrator login: q@tut.by<br />
-                    Administrator password: 11111</i><br />
+                        href="https://github.com/Victor-Irzunov/E-comerce-React-Node.js-PostgreSQL-.git"
+                        target="_blank">https://github.com/Victor-Irzunov/E-comerce-React-Node.js-PostgreSQL-.git</a><br/>
+                  <i>Administrator login: q@tut.by<br/>
+                    Administrator password: 11111</i><br/>
                   Completion time: three months
                 </div>
-
 
 
                 <span>I’ve made a web app of a simple social network:
@@ -233,95 +232,94 @@
                     </ul>
                   </li>
                 </ul>
-                <br />
+                <br/>
                 <div>
                   Here’s the GitHub link: &nbsp;&nbsp;<a href="https://github.com/Victor-Irzunov/React_social.git"
-                    target="_blank">https://github.com/Victor-Irzunov/React_social.git</a><br />
+                                                         target="_blank">https://github.com/Victor-Irzunov/React_social.git</a><br/>
                   Completion time: two weeks
                 </div>
-            </li>
 
-
-            <li>
-              <div class="collapsible-header" onclick="toggleOpen(4)">
-                <div class="collapsible-header-img">
-                  <img src="https://img.icons8.com/color/48/000000/nodejs.png" class="img__node" />
-                  <span class="collapsible__title4">Node.js</span>
+                <div class="collapsible-header" onclick="toggleOpen(4)">
+                  <div class="collapsible-header-img">
+                    <img src="https://img.icons8.com/color/48/000000/nodejs.png" class="img__node"/>
+                    <span class="collapsible__title4">Node.js</span>
+                  </div>
+                  <div class="arrow-4 i4">
+                    <span class="arrow-4-left"></span>
+                    <span class="arrow-4-right"></span>
+                  </div>
                 </div>
-                <div class="arrow-4 i4">
-                  <span class="arrow-4-left"></span>
-                  <span class="arrow-4-right"></span>
-                </div>
-              </div>
-              <div class="collapsible-body">
-                <span>I’ve made a web app with Node.js</span>
-                <ul class="ul-li">
-                  <li><span>In order to do that I’ve learnt:</span></li>
-                  <ul>
-                    <li>
-                      Handlebars
-                    </li>
-                    <li>
-                      MongoDB
-                    </li>
-                  </ul>
-                  <br>
+                <div class="collapsible-body">
+                  <span>I’ve made a web app with Node.js</span>
+                  <ul class="ul-li">
+                    <li><span>In order to do that I’ve learnt:</span></li>
+                    <ul>
+                      <li>
+                        Handlebars
+                      </li>
+                      <li>
+                        MongoDB
+                      </li>
+                    </ul>
+                    <br>
 
-                  <li><span>The following NPM packages were used:</span></li>
-                  <ul>
-                    <li>to authorize the user:</li>
+                    <li><span>The following NPM packages were used:</span></li>
                     <ul>
-                      <li>
-                        Express-session
-                      </li>
+                      <li>to authorize the user:</li>
+                      <ul>
+                        <li>
+                          Express-session
+                        </li>
+                      </ul>
+                    </ul>
+                    <ul>
+                      <li>to prevent cyberattacks and app protection (by adding headers):</li>
+                      <ul>
+                        <li>
+                          Helmet
+                        </li>
+                      </ul>
+                    </ul>
+                    <ul>
+                      <li>to validate the authorization and user registration fields:</li>
+                      <ul>
+                        <li>
+                          Express-validator
+                        </li>
+                      </ul>
+                    </ul>
+                    <ul>
+                      <li>to compress static files:</li>
+                      <ul>
+                        <li>
+                          Сompression
+                        </li>
+                      </ul>
+                    </ul>
+                    <ul>
+                      <li>to send e-mails:</li>
+                      <ul>
+                        <li>
+                          Nodemailer
+                        </li>
+                      </ul>
                     </ul>
                   </ul>
-                  <ul>
-                    <li>to prevent cyberattacks and app protection (by adding headers):</li>
-                    <ul>
-                      <li>
-                        Helmet
-                      </li>
-                    </ul>
-                  </ul>
-                  <ul>
-                    <li>to validate the authorization and user registration fields:</li>
-                    <ul>
-                      <li>
-                        Express-validator
-                      </li>
-                    </ul>
-                  </ul>
-                  <ul>
-                    <li>to compress static files:</li>
-                    <ul>
-                      <li>
-                        Сompression
-                      </li>
-                    </ul>
-                  </ul>
-                  <ul>
-                    <li>to send e-mails:</li>
-                    <ul>
-                      <li>
-                        Nodemailer
-                      </li>
-                    </ul>
-                  </ul>
-                </ul>
-                <br />
-                <div class="collapsible-body-link">
-                  Here’s the link to my web app: &nbsp;&nbsp;<a href="https://quiet-gorge-08860.herokuapp.com"
-                    target="_blank">https://quiet-gorge-08860.herokuapp.com</a><br />
-                  Here’s the GitHub link: &nbsp;&nbsp;<a
-                    href="https://github.com/Victor-Irzunov/e-commerce-application.git"
-                    target="_blank">https://github.com/Victor-Irzunov/e-commerce-application.git</a><br />
-                  <i>Administrator login: a@tut.by<br />
-                    Administrator password: 111</i><br />
-                  Completion time: one month
+                  <br/>
+                  <div class="collapsible-body-link">
+                    Here’s the link to my web app: &nbsp;&nbsp;<a href="https://quiet-gorge-08860.herokuapp.com"
+                                                                  target="_blank">https://quiet-gorge-08860.herokuapp.com</a><br/>
+                    Here’s the GitHub link: &nbsp;&nbsp;<a
+                          href="https://github.com/Victor-Irzunov/e-commerce-application.git"
+                          target="_blank">https://github.com/Victor-Irzunov/e-commerce-application.git</a><br/>
+                    <i>Administrator login: a@tut.by<br/>
+                      Administrator password: 111</i><br/>
+                    Completion time: one month
+                  </div>
                 </div>
               </div>
             </li>
+
 
             <li>
               <div class="collapsible-header" onclick="toggleOpen(5)">
@@ -436,37 +434,41 @@
         <div class="block">
           <h4>2019</h4>
           <h3>HTML CSS</h3>
-          <p>Studing in the IT-Academy </p>
+          <span>[ Studing in the IT-Academy ]</span>
         </div>
 
         <div class="block">
           <h4>2020</h4>
-          <h3>JavaScript</h3>
-          <p>Studing in the IT-Academy </p>
+          <h3>JavaScript</h3><span> [ Studing in the IT-Academy ]</span>
         </div>
 
         <div class="block">
           <h4>2020 - 2021</h4>
           <h3>React</h3>
-          <p>Self-education</p>
+          <span>[ Self-education ] &</span>
+          <p>Work at "ABS-automotors", Software Engineer, Business Automation (React, Node.js )</p>
         </div>
 
         <div class="block">
           <h4>2021</h4>
           <h3>Node.js</h3>
-          <p>Studing in the "Centre of Learning Technologies"</p>
+          <span>[ Studing in the "Centre of Learning Technologies" ] &</span>
+          <p>Development of an online store with an administrative panel (React, Node.js )</p>
         </div>
 
         <div class="block">
           <h4>2021</h4>
-          <h3>NoSQL</h3>
-          <p>Self-education</p>
+          <h3>NoSQL, SQL</h3>
+          <span>[ Self-education ] &</span>
+          <p>Development of a sports web application (React)</p>
+          <p>Development of a new from an existing web application "Academy of Dentists" (React, Node,js)</p>
         </div>
 
         <div class="block">
           <h4>2021</h4>
-          <h3>SQL</h3>
-          <p>Self-education</p>
+          <h3>TypeScript</h3>
+          <span>[ Self-education ] &</span>
+          <p>Refinement of the online platform for dentists (React, Node.js , Nest.js, TypeScript)</p>
         </div>
       </div>
     </div>
