--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div class="buttons">
           <a href="#" class="button__contact" onclick="toglleBtn()">Contact me</a>
           <a href="tel:+375333511597" class="button__contact2">📞 +375 33 351-15-97</a>
-          <a href="CV_Victor_Irzunov.docx" class="button__contact3" onclick="load()" download>Download CV</a>
+          <a href="CV_Victor_Irzunov1.docx" class="button__contact3" onclick="load()" download>Download CV</a>
 
         </div>
       </div>
