--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div class="buttons">
           <a href="#" class="button__contact" onclick="toglleBtn()">Contact me</a>
           <a href="tel:+375333511597" class="button__contact2">📞 +375 33 351-15-97</a>
-          <a href="CV_Victor_Irzunov1.docx" class="button__contact3" onclick="load()" download>Download CV</a>
+          <a href="CV_Irzunov_Victor_17.02.2022.pages" class="button__contact3" onclick="load()" download>Download CV</a>
 
         </div>
       </div>
@@ -136,7 +136,7 @@
             <li>
               <div class="collapsible-header" onclick="toggleOpen(3)">
                 <div class="collapsible-header-img">
-                  <img src="https://img.icons8.com/plasticine/100/000000/react.png" class="img__react"/>
+                  <img src="https://img.icons8.com/plasticine/100/000000/react.png" class="img__react" />
                   <span class="collapsible__title">React</span>
                 </div>
                 <div class="arrow-4 i3">
@@ -158,7 +158,7 @@
                     <li>React Bootstrap</li>
                     <li>How to launch the app on the server</li>
                   </ul>
-                  <br/>
+                  <br />
                   <li><span>I've used the following technologies:</span></li>
                   <ul>
                     <li>to manage the application’s frontend state:</li>
@@ -209,15 +209,15 @@
                     </ul>
                   </ul>
                 </ul>
-                <br/>
+                <br />
                 <div class="collapsible-body-link">
                   Here’s the link to my web app: &nbsp;&nbsp;<a href="https://euro-app.site"
-                                                                target="_blank">https://euro-app.site</a><br/>
+                    target="_blank">https://euro-app.site</a><br />
                   Here’s the GitHub link: &nbsp;&nbsp;<a
-                        href="https://github.com/Victor-Irzunov/E-comerce-React-Node.js-PostgreSQL-.git"
-                        target="_blank">https://github.com/Victor-Irzunov/E-comerce-React-Node.js-PostgreSQL-.git</a><br/>
-                  <i>Administrator login: q@tut.by<br/>
-                    Administrator password: 11111</i><br/>
+                    href="https://github.com/Victor-Irzunov/E-comerce-React-Node.js-PostgreSQL-.git"
+                    target="_blank">https://github.com/Victor-Irzunov/E-comerce-React-Node.js-PostgreSQL-.git</a><br />
+                  <i>Administrator login: q@tut.by<br />
+                    Administrator password: 11111</i><br />
                   Completion time: three months
                 </div>
 
@@ -232,16 +232,16 @@
                     </ul>
                   </li>
                 </ul>
-                <br/>
+                <br />
                 <div>
                   Here’s the GitHub link: &nbsp;&nbsp;<a href="https://github.com/Victor-Irzunov/React_social.git"
-                                                         target="_blank">https://github.com/Victor-Irzunov/React_social.git</a><br/>
+                    target="_blank">https://github.com/Victor-Irzunov/React_social.git</a><br />
                   Completion time: two weeks
                 </div>
 
                 <div class="collapsible-header" onclick="toggleOpen(4)">
                   <div class="collapsible-header-img">
-                    <img src="https://img.icons8.com/color/48/000000/nodejs.png" class="img__node"/>
+                    <img src="https://img.icons8.com/color/48/000000/nodejs.png" class="img__node" />
                     <span class="collapsible__title4">Node.js</span>
                   </div>
                   <div class="arrow-4 i4">
@@ -305,15 +305,15 @@
                       </ul>
                     </ul>
                   </ul>
-                  <br/>
+                  <br />
                   <div class="collapsible-body-link">
                     Here’s the link to my web app: &nbsp;&nbsp;<a href="https://quiet-gorge-08860.herokuapp.com"
-                                                                  target="_blank">https://quiet-gorge-08860.herokuapp.com</a><br/>
+                      target="_blank">https://quiet-gorge-08860.herokuapp.com</a><br />
                     Here’s the GitHub link: &nbsp;&nbsp;<a
-                          href="https://github.com/Victor-Irzunov/e-commerce-application.git"
-                          target="_blank">https://github.com/Victor-Irzunov/e-commerce-application.git</a><br/>
-                    <i>Administrator login: a@tut.by<br/>
-                      Administrator password: 111</i><br/>
+                      href="https://github.com/Victor-Irzunov/e-commerce-application.git"
+                      target="_blank">https://github.com/Victor-Irzunov/e-commerce-application.git</a><br />
+                    <i>Administrator login: a@tut.by<br />
+                      Administrator password: 111</i><br />
                     Completion time: one month
                   </div>
                 </div>
