change html (add node, react add works)

--- a/index.html
+++ b/index.html
@@ -81,8 +81,9 @@
           </h3>
           <p>Knowledge:</p>
           <ul class="collapsible popout">
+
             <li>
-              <div class="collapsible-header" onclick="toggleOpen(1)">
+              <div class="collapsible-header" onclick="toggleOpen(1, 'i1')">
                 <div class="collapsible-header-img">
                   <img src="https://img.icons8.com/color/48/000000/html-5.png" class="img__html" />
                   <img src="https://img.icons8.com/color/48/000000/css3.png" class="img__html" />
@@ -112,7 +113,7 @@
 
 
             <li>
-              <div class="collapsible-header" onclick="toggleOpen(2)">
+              <div class="collapsible-header" onclick="toggleOpen(2, 'i2')">
                 <div class="collapsible-header-img">
                   <img src="https://img.icons8.com/ios/50/000000/javascript--v1.png" class="img__js" />
                   <span class="collapsible__title">Javascript</span>
@@ -134,7 +135,7 @@
 
 
             <li>
-              <div class="collapsible-header" onclick="toggleOpen(3)">
+              <div class="collapsible-header" onclick="toggleOpen(3, 'i3')">
                 <div class="collapsible-header-img">
                   <img src="https://img.icons8.com/plasticine/100/000000/react.png" class="img__react" />
                   <span class="collapsible__title">React</span>
@@ -144,7 +145,41 @@
                   <span class="arrow-4-right"></span>
                 </div>
               </div>
+
               <div class="collapsible-body">
+                <span>
+                  I've created an adaptive sports web application, teamwork.
+                  (React, Redux)
+                </span>
+                <br />
+                <div class="collapsible-body-link">
+                  <br />
+                  Completion time: one mounth
+                </div>
+
+                <span>
+                  I've created a web application "Academy of Dentists", teamwork.
+                  (React, Redux, Node.js, Postgresql)
+                </span>
+                <br />
+                <div class="collapsible-body-link">
+                  <br />
+                  Completion time: three weeks
+                </div>
+
+                <span>
+                  I've created a online platform for dentists, teamwork.
+                  (React, Redux, Node.js, Nest.js, TypeScript.)
+                </span>
+                <br />
+                <div class="collapsible-body-link">
+                  Here’s the GitHub link: &nbsp;&nbsp;<a
+                    href="https://github.com/Victor-Irzunov/E-comerce-React-Node.js-PostgreSQL-.git"
+                    target="_blank">https://github.com/Victor-Irzunov/DD-dev.git</a><br />
+                  Completion time: I've been working for two months now
+                </div>
+
+
                 <span>
                   I've created an adaptive web app of the online shop (React,
                   Node.js, PostgreSQL)
@@ -211,14 +246,10 @@
                 </ul>
                 <br />
                 <div class="collapsible-body-link">
-                  Here’s the link to my web app: &nbsp;&nbsp;<a href="https://euro-app.site"
-                    target="_blank">https://euro-app.site</a><br />
                   Here’s the GitHub link: &nbsp;&nbsp;<a
                     href="https://github.com/Victor-Irzunov/E-comerce-React-Node.js-PostgreSQL-.git"
                     target="_blank">https://github.com/Victor-Irzunov/E-comerce-React-Node.js-PostgreSQL-.git</a><br />
-                  <i>Administrator login: q@tut.by<br />
-                    Administrator password: 11111</i><br />
-                  Completion time: three months
+                  Completion time: two weeks
                 </div>
 
 
@@ -236,93 +267,95 @@
                 <div>
                   Here’s the GitHub link: &nbsp;&nbsp;<a href="https://github.com/Victor-Irzunov/React_social.git"
                     target="_blank">https://github.com/Victor-Irzunov/React_social.git</a><br />
-                  Completion time: two weeks
-                </div>
-
-                <div class="collapsible-header" onclick="toggleOpen(4)">
-                  <div class="collapsible-header-img">
-                    <img src="https://img.icons8.com/color/48/000000/nodejs.png" class="img__node" />
-                    <span class="collapsible__title4">Node.js</span>
-                  </div>
-                  <div class="arrow-4 i4">
-                    <span class="arrow-4-left"></span>
-                    <span class="arrow-4-right"></span>
-                  </div>
-                </div>
-                <div class="collapsible-body">
-                  <span>I’ve made a web app with Node.js</span>
-                  <ul class="ul-li">
-                    <li><span>In order to do that I’ve learnt:</span></li>
-                    <ul>
-                      <li>
-                        Handlebars
-                      </li>
-                      <li>
-                        MongoDB
-                      </li>
-                    </ul>
-                    <br>
-
-                    <li><span>The following NPM packages were used:</span></li>
-                    <ul>
-                      <li>to authorize the user:</li>
-                      <ul>
-                        <li>
-                          Express-session
-                        </li>
-                      </ul>
-                    </ul>
-                    <ul>
-                      <li>to prevent cyberattacks and app protection (by adding headers):</li>
-                      <ul>
-                        <li>
-                          Helmet
-                        </li>
-                      </ul>
-                    </ul>
-                    <ul>
-                      <li>to validate the authorization and user registration fields:</li>
-                      <ul>
-                        <li>
-                          Express-validator
-                        </li>
-                      </ul>
-                    </ul>
-                    <ul>
-                      <li>to compress static files:</li>
-                      <ul>
-                        <li>
-                          Сompression
-                        </li>
-                      </ul>
-                    </ul>
-                    <ul>
-                      <li>to send e-mails:</li>
-                      <ul>
-                        <li>
-                          Nodemailer
-                        </li>
-                      </ul>
-                    </ul>
-                  </ul>
-                  <br />
-                  <div class="collapsible-body-link">
-                    Here’s the link to my web app: &nbsp;&nbsp;<a href="https://quiet-gorge-08860.herokuapp.com"
-                      target="_blank">https://quiet-gorge-08860.herokuapp.com</a><br />
-                    Here’s the GitHub link: &nbsp;&nbsp;<a
-                      href="https://github.com/Victor-Irzunov/e-commerce-application.git"
-                      target="_blank">https://github.com/Victor-Irzunov/e-commerce-application.git</a><br />
-                    <i>Administrator login: a@tut.by<br />
-                      Administrator password: 111</i><br />
-                    Completion time: one month
-                  </div>
+                  Completion time: one week
                 </div>
               </div>
             </li>
 
 
             <li>
-              <div class="collapsible-header" onclick="toggleOpen(5)">
+              <div class="collapsible-header" onclick="toggleOpen(4, 'i4')">
+                <div class="collapsible-header-img">
+                  <img src="https://img.icons8.com/color/48/000000/nodejs.png" class="img__node" />
+                  <span class="collapsible__title4">Node.js</span>
+                </div>
+                <div class="arrow-4 i4">
+                  <span class="arrow-4-left"></span>
+                  <span class="arrow-4-right"></span>
+                </div>
+              </div>
+              <div class="collapsible-body">
+                <span>I’ve made a web app with Node.js</span>
+                <ul class="ul-li">
+                  <li><span>In order to do that I’ve learnt:</span></li>
+                  <ul>
+                    <li>
+                      Handlebars
+                    </li>
+                    <li>
+                      MongoDB
+                    </li>
+                  </ul>
+                  <br>
+
+                  <li><span>The following NPM packages were used:</span></li>
+                  <ul>
+                    <li>to authorize the user:</li>
+                    <ul>
+                      <li>
+                        Express-session
+                      </li>
+                    </ul>
+                  </ul>
+                  <ul>
+                    <li>to prevent cyberattacks and app protection (by adding headers):</li>
+                    <ul>
+                      <li>
+                        Helmet
+                      </li>
+                    </ul>
+                  </ul>
+                  <ul>
+                    <li>to validate the authorization and user registration fields:</li>
+                    <ul>
+                      <li>
+                        Express-validator
+                      </li>
+                    </ul>
+                  </ul>
+                  <ul>
+                    <li>to compress static files:</li>
+                    <ul>
+                      <li>
+                        Сompression
+                      </li>
+                    </ul>
+                  </ul>
+                  <ul>
+                    <li>to send e-mails:</li>
+                    <ul>
+                      <li>
+                        Nodemailer
+                      </li>
+                    </ul>
+                  </ul>
+                </ul>
+                <br />
+                <div class="collapsible-body-link">
+                  Here’s the link to my web app: &nbsp;&nbsp;<a
+                    href="https://quiet-gorge-08860.herokuapp.com">https://quiet-gorge-08860.herokuapp.com</a><br />
+                    Here’s the GitHub link: &nbsp;&nbsp;<a
+                    href="https://github.com/Victor-Irzunov/e-commerce-application.git">https://github.com/Victor-Irzunov/e-commerce-application.git</a><br />
+                  <i>Administrator login: a@tut.by<br />
+                    Administrator password: 111</i><br />
+                    Completion time: one week
+                </div>
+              </div>
+            </li>
+
+
+            <li>
+              <div class="collapsible-header" onclick="toggleOpen(5, 'i5')">
                 <div class="collapsible-header-img">
                   <img src="REST-API-icon.png" class="img__api">
                   <span class="collapsible__title">REST API</span>
@@ -355,7 +388,7 @@
             </li>
 
             <li>
-              <div class="collapsible-header" onclick="toggleOpen(6)">
+              <div class="collapsible-header" onclick="toggleOpen(6,'i6')">
                 <div class="collapsible-header-img">
                   <img src="https://img.icons8.com/color/48/000000/graphql.png" class="img__graphql" />
                   <span class="collapsible__title">GraphQL</span>
